--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -21,6 +21,8 @@ import RecentProjects from '@comps/sidebar/recentCard.astro';
 
 const allPosts = await getCollection("blog");
 const allProjects = await getCollection("projects");
+
+import { SocialShare } from "astro-social-share";
 ---
 <Layout frontmatter={entry.data}>
   <div class="bg-white/40 backdrop-blur-[2px] shadow-md z-10 col-span-6 h-fit border-2 border-primary rounded-lg mb-12">
@@ -33,7 +35,9 @@ const allProjects = await getCollection("projects");
     <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl prose-ul:[list-style-type:disc] prose-ol:[list-style-type:decimal] prose-strong:text-primary">
       <Content />
     </article>
-  </div>
+    <div class="w-full flex justify-center items-center">
+      <SocialShare description={entry.data.description} title={entry.data.title} /></div>
+    </div>
   <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
       <div class="py-3 px-2">
         <h4>
