--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -36,7 +36,7 @@ import { SocialShare } from "astro-social-share";
       <Content />
     </article>
     <div class="w-full flex justify-center items-center">
-      <SocialShare url={entry.slug} description={entry.data.description} title={entry.data.title} /></div>
+      <SocialShare description={entry.data.description} title={entry.data.title} /></div>
     </div>
   <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
       <div class="py-3 px-2">
