--- a/src/components/touch.astro
+++ b/src/components/touch.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "@nodes/astro-icon/components"
+import { Icon } from 'astro-icon/components'
 import { GITHUB, EMAIL, PHONE  } from '@consts/consts';
 ---
 <a href={"mailto:"+EMAIL} aria-label={"Send Me An Email at "+EMAIL}>
