--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -6,12 +6,11 @@ import Footer from "@comps/footer.astro"
 import Mcan from '@comps/mcan.tsx';
 import { Schema } from "astro-seo-schema"
 import { NAME, WEBSITE } from '@consts/consts';
-
-console.log(frontmatter)
 ---
 <!doctype html>
 <html lang="en" class="overflow-x-hidden">
 	<Head sitetitle={frontmatter.title}> 
+		<title>{frontmatter.title}</title>
 
 		<meta property="og:title" content={frontmatter.title} />
 		<meta property="og:type" content="article" />
