--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -22,7 +22,10 @@ import RecentProjects from '@comps/sidebar/recentCard.astro';
 const allPosts = await getCollection("blog");
 const allProjects = await getCollection("projects");
 
-import { SocialShare } from "astro-social-share";
+import Email from "@comps/social-share/Email.astro";
+import Facebook from "@comps/social-share/Facebook.astro";
+import LinkedIn from "@comps/social-share/LinkedIn.astro";
+import Whatsapp from "@comps/social-share/Whatsapp.astro";
 ---
 <Layout frontmatter={entry.data}>
   <div class="bg-white/40 backdrop-blur-[2px] shadow-md z-10 col-span-6 h-fit border-2 border-primary rounded-lg mb-12">
@@ -35,9 +38,11 @@ import { SocialShare } from "astro-social-share";
     <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl prose-ul:[list-style-type:disc] prose-ol:[list-style-type:decimal] prose-strong:text-primary">
       <Content />
     </article>
-    <div class="w-full flex justify-center items-center">
-      <SocialShare description={entry.data.description} title={entry.data.title} /></div>
-    </div>
+    <div class="w-full flex flex-row gap-3 justify-center items-center py-4">
+      <h3 class="text-2xl font-bold text-primary">Share:</h3>
+      
+    </div>      
+  </div>
   <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
       <div class="py-3 px-2">
         <h4>
