--- a/src/components/list.astro
+++ b/src/components/list.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "@nodes/astro-icon/components"
+import { Icon } from 'astro-icon/components'
 ---
 <li>
     <Icon name="stack/html" class="w-16 mt-1 h-auto text-gray-500" />
