--- a/src/components/testimonialCard.astro
+++ b/src/components/testimonialCard.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "@nodes/astro-icon/components"
+import { Icon } from 'astro-icon/components'
 import { Image } from "astro:assets";
 const { reviews } = Astro.props;
 const {cname, headshot, message} = reviews.data;
