--- a/src/components/share/Twitter.astro
+++ b/src/components/share/Twitter.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-const { url=Astro.request.url, description, via} = Astro.props;
+const { url, description, via} = Astro.props;
 
 let URL = `https://x.com/intent/tweet?url=${url}`
 
