--- a/src/components/share/Whatsapp.astro
+++ b/src/components/share/Whatsapp.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-const { url=Astro.request.url, description, style} = Astro.props;
+const { url, description } = Astro.props;
 
 let URL = `whatsapp://send?text=`;
 
