--- a/src/components/share/LinkedIn.astro
+++ b/src/components/share/LinkedIn.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 
-const { url=Astro.request.url} = Astro.props;
+const { url } = Astro.props;
 let URL = `https://www.linkedin.com/sharing/share-offsite/?url=${url}`
 
 import Linked from '@assets/share/linkedin.png'
