--- a/src/components/share/Telegram.astro
+++ b/src/components/share/Telegram.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-const { url=Astro.request.url, title } = Astro.props;
+const { url, title } = Astro.props;
 
 const encoded_url = encodeURIComponent(url);
 let URL = `https://t.me/share/url?url=${encoded_url}&title=${title}`
