--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -23,7 +23,6 @@ const allPosts = await getCollection("blog");
 const allProjects = await getCollection("projects");
 
 const currentPageURL = Astro.url.href;
-console.log(Astro.url.href);
 import Email from "@comps/share/Email.astro";
 import Facebook from '@comps/share/Facebook.astro';
 import Twitter from '@comps/share/Twitter.astro';
@@ -44,16 +43,23 @@ import Telegram from '@comps/share/Telegram.astro';
     <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl prose-ul:[list-style-type:disc] prose-ol:[list-style-type:decimal] prose-strong:text-primary">
       <Content />
     </article>
-    <div class="w-full flex flex-row gap-3 justify-center items-center py-4">
-      <h3 class="text-2xl font-bold text-primary">Share:</h3>
-      <Reddit url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Facebook url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Twitter url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <LinkedIn url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Medium url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Whatsapp url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Telegram url={currentPageURL} title={entry.data.title} description={entry.data.description} />
-      <Email url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <div class="w-full flex flex-col gap-3 justify-center items-center py-4">
+        <div class="w-full flex flex-col gap-3 justify-center items-center pb-12">
+          <h1>The current URL is: {Astro.url}</h1>
+          <h1>The current URL pathname is: {Astro.url.pathname}</h1>
+          <h1>The current URL origin is: {Astro.url.origin}</h1>
+        </div>
+        <div class="flex flex-row gap-3 justify-center items-center">
+          <h3 class="text-2xl font-bold text-primary">Share:</h3>
+          <Reddit url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Facebook url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Twitter url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <LinkedIn url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Medium url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Whatsapp url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Telegram url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+          <Email url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+        </div>
     </div>      
   </div>
   <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
