--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,8 +3,8 @@ import { getCollection, type CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
 
 export async function getStaticPaths() {
-  const blog = await getCollection("blog");
-  return blog.map((entry) => ({
+  const blogCollection = await getCollection("blog");
+  return blogCollection.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry,  },
   }));
@@ -31,9 +31,22 @@ import LinkedIn from "@comps/share/LinkedIn.astro";
 import Medium from '@comps/share/Medium.astro';
 import Reddit from '@comps/share/Reddit.astro';
 import Telegram from '@comps/share/Telegram.astro';
+
+import { NAME, ABOUT } from '@consts/consts';
+import AVATAR from '@assets/me.png';
 ---
 <Layout frontmatter={entry.data}>
-  <div class="bg-white/40 backdrop-blur-[2px] shadow-md z-10 col-span-6 h-fit border-2 border-primary rounded-lg mb-12">
+  <div class="w-16 mt-1 border-2 border-primary rounded-lg justify-center items-center fixed flex flex-col gap-3 py-4 z-50 bg-gradient-to-r from-primary/20 to-secondary/30 backdrop-blur-[2px]">
+    <Reddit url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Facebook url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Twitter url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <LinkedIn url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Medium url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Whatsapp url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Telegram url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+    <Email url={currentPageURL} title={entry.data.title} description={entry.data.description} />
+  </div>
+  <div class="ms-20 bg-white/40 backdrop-blur-[2px] shadow-md z-10 col-span-6 h-fit border-2 border-primary rounded-lg mb-3">
     <div class="w-full bg-cover bg-no-repeat relative">
       <Image src={entry.data.image} alt={entry.data.title} class="w-full h-full rounded-xl object-cover" />
       <span class="w-full h-1/4 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
@@ -57,23 +70,54 @@ import Telegram from '@comps/share/Telegram.astro';
         </div>
     </div>
   </div>
-  <div class="col-span-2 h-fit border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10">
-      <div class="py-3 px-2">
+  <div class="col-span-2 h-fit">
+
+      <div class="py-3 px-2 border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10 mb-8">
         <h4>
           <span class="text-2xl font-bold text-primary">Recent Posts</span>
         </h4>
         {allPosts.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).slice(0, 3).map((p: any) => <RecentCard post={p}/>)}
       </div>
-      <div class="py-3 px-2">
+
+      <div class="py-3 px-2 border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10 mb-8">
         <h4>
           <span class="text-2xl font-bold text-primary">Recent Projects</span>
         </h4>
         {allProjects.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).slice(0, 3).map((p: any) => <RecentProjects post={p}/>)}
       </div>
+      
+      <div class="py-3 px-2 border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10 mb-8">
+        <h4>
+          <span class="text-2xl font-bold text-primary">Categories</span>
+        </h4>
+      </div>
+
+      <div class="py-3 px-2 border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10 mb-8">
+        <h4>
+          <span class="text-2xl font-bold text-primary">Tags</span>
+        </h4>
+      </div>
+
+      <div class="py-3 px-2 border-2 border-primary rounded-lg bg-white/40 backdrop-blur-[2px] shadow-md z-10 mb-8">
+        <h4>
+          <span class="text-2xl font-bold text-primary">About Author</span>
+        </h4>
+        <h5 class="font-bold text-secondary my-3 flex flex-col justify-center items-center">
+          <span class="unselectable font-bold stroke-text mx-auto text-4xl mb-3" transition:name="myname">{NAME}</span>
+          <Image loading="eager" src={AVATAR} alt={NAME} class="col-span-2 w-44 bg-gradient-to-b from-primary/70 to-secondary/60 h-auto rounded-full backdrop-blur-[2px]" transition:name='me' />
+        </h5>
+        <p class="text-sm text-gray-700" transition:name="shortdescription">
+          {ABOUT}
+        </p>
+        <span class="flex flex-row gap-3 my-3">
+          <a href="/about" class="text-secondary underline font-semibold hover:no-underline">Learn More</a>
+        </span>
+      </div>
   </div>
-  <div id="disqus_thread"></div>
+  
+  
+  <div id="disqus_thread" class="ms-20 bg-white/40 backdrop-blur-[2px] shadow-md z-10 col-span-6 h-fit border-2 border-primary rounded-lg mb-12 p-12"></div>
   <script type="text/javascript" define:vars={{ currentPageURL }}>
-    console.log(currentPageURL);
     document.addEventListener('DOMContentLoaded', () => {  
         var disqus_config = function () {
         this.page.url = currentPageURL;  
