categories and transitions

--- a/src/components/sidebar/contact.astro
+++ b/src/components/sidebar/contact.astro
@@ -1,7 +1,7 @@
 ---
-import Touch from "./touch.astro"
+import Touch from "../touch.astro"
 ---
-<section id="contact">
+<section id="contact" class="col-span-12 ms-20">
     <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 my-12">
         <h2 data-aos="fade-right" data-aos-duration="1100" class="font-outfit pb-8 font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">Contact <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Me</span></h2>
       <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
