--- a/src/components/recentCardBlog.astro
+++ b/src/components/recentCardBlog.astro
@@ -15,7 +15,7 @@ const formattedDate = `${day} ${month}`;
     <div class='p-2'>
       <Image loading="lazy" src={image} alt={imagealt} class="rounded-2xl "/>
       <span class='text-lg inline-block px-2 font-semibold pt-2 text-slate-200 mb-1 transition-all duration-500 ease-in-out relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 dark:after:bg-white 
-      after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-100'>
+      after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-100' transition:name="posttitle">
         {title}
       </span>
       <p class='text-sm text-white px-2 pb-3'>
