--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '@layouts/Layout.astro';
 import Hero from '@comps/hero.astro';
 import WhatIDo from '@comps/whatido.astro';
 import RecentProjects from '@comps/recentSection.astro';
+import RecentYappings from '@comps/recentSectionBlog.astro';
 import Testimonials from '@comps/testimonials.astro';
 import Contact from '@comps/contact.astro';
 ---
@@ -12,5 +13,6 @@ import Contact from '@comps/contact.astro';
     <WhatIDo />
     <RecentProjects />
     <Testimonials />
+    <RecentYappings />
     <Contact />
 </Layout>
