--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,7 +19,7 @@ import Contact from '@comps/contact.astro';
     <div class="py-12"></div>
     <section class="flex flex-col w-[96%] h-fit bg-white/50 backdrop-blur-[2px] mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_30px] shadow-secondary/30 border-2 border-secondary">
         <h2 transition:name="projectstitle" class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">My <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Blog Posts</span></h2>
-        <p transition:name="projectsdes" class="text-primary mt-2">All my yappings goes here..</p>
+        <p transition:name="projectsdes" class="text-primary mt-2">All my yappings go here..</p>
         <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
             {page.data.sort((a: { data: { pubDate: string | number | Date; }; }, b: { data: { pubDate: string | number | Date; }; }) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}
         </div>
