--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -53,6 +53,24 @@ import Contact from '@comps/sidebar/contact.astro';
         <h1 class="text-3xl font-bold text-white" transition:name="posttitle">{entry.data.title}</h1>
       </span>
     </div>
+    
+    <div class="flex flex-row justify-between items-center pt-4 px-4">
+      <time datetime={entry.data.pubDate.toISOString()} class="text-sm text-primary font-bold">
+        Posted on: 
+        <span class="font-normal text-gray-700">
+          {new Date(entry.data.pubDate).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
+        </span>
+      </time>
+      
+      {entry.data.modDate && (
+        <time datetime={entry.data.modDate.toISOString()} class="text-sm text-primary font-bold">
+          Modified on: 
+          <span class="font-normal text-gray-700">
+            {new Date(entry.data.modDate).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
+          </span>
+        </time>
+      )}
+    </div>
 
     <article class="w-full px-6 py-6 prose-lg prose-headings:font-bold prose-headings:my-3 prose-headings:text-primary prose-p:text-gray-700 prose-img:rounded-xl prose-ul:[list-style-type:disc] prose-ol:[list-style-type:decimal] prose-strong:text-primary">
       <Content />
