--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -30,7 +30,7 @@ const currentPageURL = Astro.url.href;
 
 import Contact from '@comps/sidebar/contact.astro';
 ---
-<Layout frontmatter={entry.data}>
+<Layout frontmatter={entry.data} SiteTitle={entry.data.title}>
 
   <div class="col-span-1 h-fit flex justify-center relative">
     <div class="flex flex-col gap-3 bg-white/60 backdrop-blur-[2px] fixed border-2 border-primary rounded-lg p-3">
