--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,11 +3,12 @@ import Head from "@comps/head.astro"
 import Header from "@comps/header.astro"
 import Footer from "@comps/footer.astro"
 import Mcan from '@comps/mcan.tsx';
-import { NAME } from '@consts/consts';
+const { SiteTitle } = Astro.props;
 ---
 <!doctype html>
 <html lang="en" class="overflow-x-hidden">
-	<Head sitetitle={NAME}> 
+	<Head> 
+		<title>{SiteTitle}</title>
 	</Head>
 	<body class="bg-base-100">
 		<Mcan client:load />
