--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -54,5 +54,5 @@ import Touch from './touch.astro';
             </div>
         </div>
     </div>
-    <Name client:load  transition:name='name' /> 
+    <Name client:load  /> 
 </section>
