--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@ import { SHORT_TITLE } from "@consts/consts";
 import Resume from "@comps/core/resume.jsx";
 import Menu from "@comps/menu.astro";
 ---
-<div class="z-[999] navbar bg-gradient-to-r from-primary/50 to-secondary/80 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500 shadow-xl shadow-secondary/40">
+<div class="z-[999] navbar bg-white/50 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500 shadow-xl shadow-secondary/30">
     <div class="navbar-start">
         <div class="dropdown">
             <div tabindex="-1" role="button" class="btn btn-ghost text-white lg:hidden">
@@ -15,7 +15,7 @@ import Menu from "@comps/menu.astro";
                 <Menu />
             </ul>
         </div>
-        <h3 class="ms-4 text-2xl font-outfit font-bold stroke-text text-base-100" >
+        <h3 class="ms-4 text-3xl font-outfit font-bold stroke-text text-primary" >
             {SHORT_TITLE}
         </h3>
     </div>
