--- a/src/components/share/Discord.astro
+++ b/src/components/share/Discord.astro
@@ -5,5 +5,5 @@ const discordShareURL = `https://discord.com/channels?guild_id=&channel_id=&cont
 import DiscordIcon from '@assets/share/discord.png';
 ---
 <a class="social-share-btn" target="_blank" href={discordShareURL} rel="noopener noreferrer">
-  <Image src={DiscordIcon} alt="Discord" class="w-7 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading="eager" src={DiscordIcon} alt="Discord" class="w-7 h-auto hover:scale-125 transition-all duration-500" />
 </a>
