--- a/src/components/share/Twitter.astro
+++ b/src/components/share/Twitter.astro
@@ -10,5 +10,5 @@ if (via) URL += `&via=${via}`
 import Twit from '@assets/share/twitter.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image src={Twit} alt="Twitter" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading="eager" src={Twit} alt="Twitter" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
