--- a/src/components/recentSectionBlog.astro
+++ b/src/components/recentSectionBlog.astro
@@ -3,9 +3,9 @@ import RecentCard from '@comps/recentCardBlog.astro'
 import { getCollection } from 'astro:content';
 const allPosts = await getCollection("blog");
 ---
-<section id="recent" class="flex flex-col w-[96%] h-fit bg-white/60 backdrop-blur-[2px] mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_50px] shadow-secondary/30 border-2 border-secondary">
-    <h2 transition:name="projectstitle" class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">Recent <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Posts</span></h2>
-    <p  transition:name="projectsdes" class="text-primary">Here are my most recent yappings...</p>
+<section class="flex flex-col w-[96%] h-fit bg-white/60 backdrop-blur-[2px] mx-auto rounded-2xl p-12 shadow-[inset_2px_2px_50px] shadow-secondary/30 border-2 border-secondary">
+    <h2 class="font-outfit font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">Recent <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Posts</span></h2>
+    <p class="text-primary">These are my most recent yappings...</p>
     <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
         {allPosts.sort((a, b) => new Date(b.data.pubDate).getTime() - new Date(a.data.pubDate).getTime()).map((p: any) => <RecentCard post={p}/>)}
     </div>
