--- a/src/components/share/Facebook.astro
+++ b/src/components/share/Facebook.astro
@@ -7,5 +7,5 @@ let URL = `https://www.facebook.com/sharer/sharer.php?u=${url}`
 import Face from '@assets/share/facebook.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image src={Face} alt="Facebook" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading="eager" src={Face} alt="Facebook" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
