--- a/src/components/share/Reddit.astro
+++ b/src/components/share/Reddit.astro
@@ -8,5 +8,5 @@ let URL = `https://www.reddit.com/submit?url=${encoded_url}&title=${title}`
 import Reddi from '@assets/share/reddit.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image src={Reddi} alt="Reddit" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading="eager" src={Reddi} alt="Reddit" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
