--- a/src/components/share/Telegram.astro
+++ b/src/components/share/Telegram.astro
@@ -8,5 +8,5 @@ let URL = `https://t.me/share/url?url=${encoded_url}&title=${title}`
 import Tele from '@assets/share/telegram.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image src={Tele} alt="Tele" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading="eager" src={Tele} alt="Tele" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
