--- a/src/components/sidebar/recentCard.astro
+++ b/src/components/sidebar/recentCard.astro
@@ -9,12 +9,12 @@ const month = date.toLocaleString('en-US', { month: 'short' });
 const day = date.getDate();
 const formattedDate = `${day} ${month}`;
 ---
-<a href={`/projects/${post.slug}/`} class="group bg-gradient-to-t from-primary to-secondary hover:from-primary/90 hover:to-secondary relative rounded-2xl border" data-aos="fade-up" data-aos-duration="1000" transition:name={title}>
+<a href={`/projects/${post.slug}/`} class="group bg-gradient-to-t from-primary to-secondary hover:from-primary/90 hover:to-secondary relative rounded-2xl border" data-aos="fade-up" data-aos-duration="1000">
   <div class='relative p-2 text-gray-700'>
     <div class='p-2'>
       <Image loading="lazy" src={image} alt={imagealt} class="rounded-2xl "/>
       <span class='text-lg inline-block px-2 font-semibold pt-2 text-secondary mb-1 transition-all duration-500 ease-in-out relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 dark:after:bg-white 
-      after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-100'  transition:name="posttitle">
+      after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-100'>
         {title}
       </span>
       <p class='text-sm text-gray-700 px-2 pb-3'>
