--- a/src/components/testimonialCard.astro
+++ b/src/components/testimonialCard.astro
@@ -5,7 +5,7 @@ const { reviews } = Astro.props;
 const {cname, headshot, message} = reviews.data;
 ---
 <div class="mb-8 sm:break-inside-avoid" data-aos="fade-up" data-aos-duration="600">
-    <blockquote class="rounded-lg bg-gray-50/60 backdrop-blur-[2px] p-6 shadow-lg sm:p-8">
+    <blockquote class="rounded-lg bg-white/60 backdrop-blur-[2px] p-6 shadow-lg sm:p-8 border-2 border-primary">
       <div class="flex items-center gap-4">
         <div class="p-2 bg-gradient-to-r from-primary/50 to-secondary/70 rounded-full">
           <Image src={headshot} alt={"This is "+cname} class="size-16" />
