--- a/src/components/aboutme.astro
+++ b/src/components/aboutme.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import { NAME } from '@consts/consts';
-import Me from '@assets/me.png';
+import Me from '@assets/toy me.png';
 import Name from '@comps/code.jsx'
 import Touch from './touch.astro';
 ---
