--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,7 +2,7 @@
 import Name from '@comps/code.jsx'
 import { Image } from 'astro:assets'
 import { NAME } from '@consts/consts';
-import Me from '@assets/me.png';
+import Me from '@assets/toy me.png';
 import Touch from './touch.astro';
 ---
 <section class='relative h-[500] flex flex-col w-full py-24 justify-center items-center'>
