--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,8 @@ const { SiteTitle } = Astro.props;
 <html lang="en" class="overflow-x-hidden">
 	<Head> 
 		<title>{SiteTitle}</title>
+		<meta property="og:description" content="Dynamic Web Developer with expertise in WordPress, Shopify, Webflow, and SEO. Crafting custom solutions for businesses worldwide.">
+		<meta name="keywords" content="Vim, Vi, Text Editor, Vim Tutorials, Vim Tips, Vim Plugins, Vim Configuration, Vim Escape, Coding, Developer, Tools, Web Developer, Senior Web Developer, E-Commerce Solutions Architect, WordPress Developer, Shopify Developer, Webflow Developer, Front-End Developer, Freelance Web Developer, SEO Optimization, Custom Web Development, WooCommerce Expert, CMS Development, Website Maintenance, API Integrations, UI/UX Design, Technical Project Lead, Web Design, Digital Marketing, Yasir Rehman, Curious Coder, Website Performance Optimization">
 	</Head>
 	<body class="bg-base-100">
 		<Mcan client:load />
