--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -3,8 +3,9 @@ import { ViewTransitions } from 'astro:transitions';
 import 'aos/dist/aos.css';
 ---
 <head>    
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" href="/favicon.png" />
     <slot />
 </head>
